Basic layout changes

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,12 +14,12 @@
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.parekh_bolinao.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:label="@string/title_recent"
+        tools:layout="@layout/fragment_recent" />
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.parekh_bolinao.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:label="@string/title_summaries"
+        tools:layout="@layout/fragment_summaries" />
 </navigation>
