--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -84,6 +84,7 @@
         android:layout_marginEnd="12dp"
         android:layout_row="3"
         android:layout_column="1"
-        android:text="@string/check_button" />
+        android:text="@string/check_button"
+        android:onClick="onCheckClick"/>
 
 </GridLayout>
