--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/home_frag"
     android:layout_height="match_parent">
 
     <TextView
@@ -77,14 +78,13 @@
         android:hint="@string/reading_hint" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="12dp"
         android:layout_row="3"
         android:layout_column="1"
-        android:text="@string/check_button"
-        android:onClick="onCheckClick"/>
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="12dp"
+        android:text="@string/check_button" />
 
 </GridLayout>
