--- a/app/src/main/res/layout/recent_entry_row_layout.xml
+++ b/app/src/main/res/layout/recent_entry_row_layout.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/user_name"
+        android:id="@+id/username_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"/>
