--- a/app/src/main/res/layout/recent_entry_row_layout.xml
+++ b/app/src/main/res/layout/recent_entry_row_layout.xml
@@ -8,12 +8,22 @@
         android:id="@+id/username_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"/>
+        android:layout_margin="4dp"
+        android:textStyle="bold"
+        android:textColor="#000000"/>
+
+    <TextView
+        android:id="@+id/userid_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:textStyle="italic"/>
 
     <TextView
         android:id="@+id/entry_datetime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="4dp"
         android:textStyle="italic"/>
 
     <LinearLayout
@@ -24,13 +34,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/systolic_label"/>
+            android:layout_margin="4dp"
+            android:text="@string/systolic_label"
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/systolic_reading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"/>
+            android:layout_margin="4dp"
+            android:textStyle="bold"
+            android:textColor="#000000"/>
 
     </LinearLayout>
 
@@ -42,13 +56,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/diastolic_label"/>
+            android:layout_margin="4dp"
+            android:text="@string/diastolic_label"
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/diastolic_reading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"/>
+            android:layout_margin="4dp"
+            android:textStyle="bold"
+            android:textColor="#000000"/>
 
     </LinearLayout>
 
