--- a/app/src/main/res/layout/summary_row.xml
+++ b/app/src/main/res/layout/summary_row.xml
@@ -1,98 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/summary_row"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:stretchColumns="0, 1">
 
-    <TextView
-        android:id="@+id/name_label"
-        android:layout_width="0dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="136dp"
-        android:text="@string/name_label"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/name_val"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TableRow>
+        <TextView
+            android:id="@+id/name_label"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/name_label"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/syst_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Systolic Reading"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/sys_val"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/name_val"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/textview"
+            android:textSize="18sp" />
+    </TableRow>
 
-    <TextView
-        android:id="@+id/cond_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Average Condition"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/cond_val"
-        app:layout_constraintStart_toStartOf="parent" />
+    <TableRow>
+        <TextView
+            android:id="@+id/syst_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/systolic_reading"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/cond_val"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="53dp"
-        android:text="TextView"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/cond_label"
-        app:layout_constraintTop_toBottomOf="@+id/dia_val" />
+        <TextView
+            android:id="@+id/sys_val"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="18sp" />
+    </TableRow>
 
-    <TextView
-        android:id="@+id/dia_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Diastolic Reading"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/dia_val"
-        app:layout_constraintStart_toStartOf="parent" />
+    <TableRow>
+        <TextView
+            android:id="@+id/dia_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/diastolic_reading"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/dia_val"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="58dp"
-        android:text="TextView"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/dia_label"
-        app:layout_constraintTop_toBottomOf="@+id/sys_val" />
+        <TextView
+            android:id="@+id/dia_val"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="18sp"/>
+    </TableRow>
 
-    <TextView
-        android:id="@+id/name_val"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="153dp"
-        android:text="TextView"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/name_label"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TableRow>
+        <TextView
+            android:id="@+id/cond_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Average Condition"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBaseline_toBaselineOf="@+id/cond_val"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/sys_val"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
-        android:layout_marginEnd="2dp"
-        android:text="TextView"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/name_val"
-        app:layout_constraintTop_toBottomOf="@+id/name_val" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/cond_val"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="18sp"/>
+    </TableRow>
+</TableLayout>
