--- a/app/src/main/res/layout/recent_entry_row_layout.xml
+++ b/app/src/main/res/layout/recent_entry_row_layout.xml
@@ -2,65 +2,76 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/username_data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:textStyle="bold"
-        android:textColor="#000000"/>
-
-    <TextView
-        android:id="@+id/entry_datetime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:textStyle="italic"/>
-
+    android:orientation="horizontal">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
+        android:orientation="vertical"
+        android:layout_marginStart="@dimen/activity_horizontal_margin">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:text="@string/systolic_label"
-            android:textColor="#000000"/>
-
-        <TextView
-            android:id="@+id/systolic_reading"
-            android:layout_width="wrap_content"
+            android:id="@+id/username_data"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:textStyle="bold"
             android:textColor="#000000"/>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/entry_datetime"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:text="@string/diastolic_label"
-            android:textColor="#000000"/>
+            android:textStyle="italic"/>
 
-        <TextView
-            android:id="@+id/diastolic_reading"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:textStyle="bold"
-            android:textColor="#000000"/>
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:text="@string/systolic_label"
+                android:textColor="#000000"/>
+
+            <TextView
+                android:id="@+id/systolic_reading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:textStyle="bold"
+                android:textColor="#000000"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:text="@string/diastolic_label"
+                android:textColor="#000000"/>
+
+            <TextView
+                android:id="@+id/diastolic_reading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:textStyle="bold"
+                android:textColor="#000000"/>
+
+        </LinearLayout>
     </LinearLayout>
+    <View
+        android:id="@+id/colored_indicator"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="-30dp"
+        android:background="@color/colorPrimaryDark"/>
 
 </LinearLayout>
