--- a/app/src/main/res/layout/recent_entry_row_layout.xml
+++ b/app/src/main/res/layout/recent_entry_row_layout.xml
@@ -14,6 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:textStyle="bold"
+            android:textSize="20sp"
             android:textColor="#000000"/>
 
         <TextView
