--- a/app/src/main/res/layout/summary_row.xml
+++ b/app/src/main/res/layout/summary_row.xml
@@ -18,7 +18,7 @@
 
         <TextView
             android:id="@+id/name_val"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/textview"
             android:textSize="18sp" />
@@ -54,6 +54,7 @@
             android:id="@+id/dia_val"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="start"
             android:text="TextView"
             android:textSize="18sp"/>
     </TableRow>
