--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,92 +2,91 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/home_frag"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginTop="12dp"
-        android:layout_column="0"
         android:layout_row="0"
+        android:layout_column="0"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
         android:text="@string/currUser"
+        android:textColor="#000000"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="#000000" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/current_user_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginTop="12dp"
-        android:layout_column="1"
         android:layout_row="0"
-        android:textSize="16sp"
-        android:textColor="#000000" />
+        android:layout_column="1"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/user_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginTop="16dp"
-        android:layout_column="0"
         android:layout_row="1"
+        android:layout_column="0"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
         android:text="@string/user_id"
-        android:textSize="16sp"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
     <EditText
         android:id="@+id/name_edit"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginTop="16dp"
         android:layout_row="1"
         android:layout_column="1"
-        android:inputType="textPersonName"
-        android:hint="@string/name_hint" />
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
+        android:hint="@string/name_hint"
+        android:inputType="textPersonName" />
 
     <TextView
         android:id="@+id/systolic_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_row="2"
+        android:layout_column="0"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="12dp"
         android:text="@string/systolic_label"
-        android:layout_column="0"
-        android:layout_row="2"
-        android:textSize="16sp"
-        android:textColor="#000000"/>
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
     <EditText
         android:id="@+id/systolic_edit"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="12dp"
         android:layout_row="2"
         android:layout_column="1"
-        android:inputType="number"
-        android:hint="@string/reading_hint" />
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="12dp"
+        android:hint="@string/reading_hint"
+        android:inputType="number" />
 
     <TextView
         android:id="@+id/diastolic_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="12dp"
         android:layout_row="3"
         android:layout_column="0"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="12dp"
         android:text="@string/diastolic_label"
         android:textColor="#000000"
         android:textSize="16sp" />
@@ -96,22 +95,22 @@
         android:id="@+id/diastolic_edit"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
+        android:layout_row="3"
+        android:layout_column="1"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="12dp"
-        android:layout_column="1"
-        android:layout_row="3"
-        android:inputType="number"
-        android:hint="@string/reading_hint" />
+        android:hint="@string/reading_hint"
+        android:inputType="number" />
 
     <Button
         android:id="@+id/clear_user"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_row="4"
         android:layout_column="0"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="12dp"
-        android:text="@string/clearUser"/>
+        android:text="@string/clearUser" />
 
     <Button
         android:id="@+id/add_new"
@@ -126,22 +125,22 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/setUserText"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
         android:layout_row="5"
         android:layout_column="0"
-        android:layout_columnSpan="2"/>
+        android:layout_columnSpan="2"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/setUserText" />
 
     <ListView
         android:id="@+id/existing_users"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginTop="16dp"
         android:layout_row="6"
         android:layout_column="0"
-        android:layout_columnSpan="2"/>
+        android:layout_columnSpan="2"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp" />
 
 </GridLayout>
