--- a/app/src/main/res/layout/fragment_summaries.xml
+++ b/app/src/main/res/layout/fragment_summaries.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/user_summaries"
-        android:textSize="25sp"
+        android:text=""
+        android:textSize="22sp"
         android:textStyle="bold"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"/>
