--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="hbp1">#F1B9A9</color>
     <color name="hbp2">#AE977D</color>
     <color name="hypertensive">#FF0000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
